tests/baselines/reference/strictModeWordInImportDeclaration.errors.txt
tests/cases/compiler/strictModeWordInImportDeclaration.ts(2,13): error TS1212: Identifier expected. 'package' is a reserved word in strict mode
tests/cases/compiler/strictModeWordInImportDeclaration.ts(2,26): error TS2307: Cannot find module './1'.
tests/cases/compiler/strictModeWordInImportDeclaration.ts(3,16): error TS1212: Identifier expected. 'private' is a reserved word in strict mode
tests/cases/compiler/strictModeWordInImportDeclaration.ts(3,30): error TS2307: Cannot find module './1'.
tests/cases/compiler/strictModeWordInImportDeclaration.ts(4,20): error TS2307: Cannot find module './1'.


==== tests/cases/compiler/strictModeWordInImportDeclaration.ts (5 errors) ====
    "use strict"
    import * as package from "./1"
                ~~~~~~~
!!! error TS1212: Identifier expected. 'package' is a reserved word in strict mode
                             ~~~~~
!!! error TS2307: Cannot find module './1'.
    import {foo as private} from "./1"
                   ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode
                                 ~~~~~
!!! error TS2307: Cannot find module './1'.
    import public from "./1"
                       ~~~~~
!!! error TS2307: Cannot find module './1'.